--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 publish = ["crates-io"]
 authors = ["dbydd <dbydd@outlook.com>"]
 license = "gpl-3.0-or-later"
-description = "A dynamic array that can be used to join futures"
+description = "A dynamic array that can be used to join futures for single thread async programming"
 repository = "https://github.com/dbydd/dynamic_join_array"
 categories = ["concurrency"]
+keywords = ["futures","dynamic","join","no_std"]
 
 [dependencies]
 futures = {version="0.3.31",default-features=false, features=["async-await","alloc"]}
