--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 publish = ["crates-io"]
 authors = ["dbydd <dbydd@outlook.com>"]
-license = "gpl-3.0-or-later"
+license = "MIT OR Apache-2.0"
 description = "A dynamic array that can be used to join futures for single thread async programming"
 repository = "https://github.com/dbydd/dynamic_join_array"
 categories = ["concurrency"]
