--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ keywords = ["futures","dynamic","join","no_std"]
 
 [dependencies]
 futures = {version="0.3.31",default-features=false, features=["async-await","alloc"]}
+async-lock = {version = "3.4.0",default-features =  false}
 
 [dev-dependencies]
-async-lock = {version = "3.4.0",default-features =  false}
+tokio = {version="1.23.0",default-features=false, features=["full"]}
